// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code Export JavaScript Cypress should export a suite 1`] = `
"Feature: login
        
    Scenario: valid credentials
        Given I reset the \\"backup\\" database
        And I log in as \\"test.user@example.com\\"
        
    Scenario: invalid credentials
        Given I reset the \\"backup\\" database
        And I log in as \\"test.user@example.com\\"
"
`;

exports[`Code Export JavaScript Cypress should export a suite that uses control flow commands 1`] = `
"Feature: control flow
        
    Scenario: control flow if
        Given I reset the \\"backup\\" database
        And I log in as \\"test.user@example.com\\"
        
    Scenario: control flow else if
        Given I reset the \\"backup\\" database
        And I log in as \\"test.user@example.com\\"
        
    Scenario: control flow else
        Given I reset the \\"backup\\" database
        And I log in as \\"test.user@example.com\\"
        
    Scenario: control flow do
        Given I reset the \\"backup\\" database
        And I log in as \\"test.user@example.com\\"
        
    Scenario: control flow times
        Given I reset the \\"backup\\" database
        And I log in as \\"test.user@example.com\\"
        
    Scenario: control flow while
        Given I reset the \\"backup\\" database
        And I log in as \\"test.user@example.com\\"
"
`;

exports[`Code Export JavaScript Cypress should export a suite with a reused test method 1`] = `
"Feature: login
    
        
        
        
        
        
    
        
    Scenario: invalid credentials
        Given I reset the \\"backup\\" database
        And I log in as \\"test.user@example.com\\"
        
    Scenario: valid credentials
        Given I reset the \\"backup\\" database
        And I log in as \\"test.user@example.com\\"
"
`;

exports[`Code Export JavaScript Cypress should export a suite with commands that open a new window inside of a reused test method 1`] = `
"Feature: Default Suite
    
        
    
        
    Scenario: reuse
        Given I reset the \\"backup\\" database
        And I log in as \\"test.user@example.com\\"
"
`;

exports[`Code Export JavaScript Cypress should export a suite with just one new window util method when there are multiple commands that open a new window 1`] = `
"Feature: Default Suite
    
        
    
        
    Scenario: reuse
        Given I reset the \\"backup\\" database
        And I log in as \\"test.user@example.com\\"
        
    Scenario: select window
        Given I reset the \\"backup\\" database
        And I log in as \\"test.user@example.com\\"
"
`;

exports[`Code Export JavaScript Cypress should export a test 1`] = `
"Feature: login
        
    Scenario: login
        Given I reset the \\"backup\\" database
        And I log in as \\"test.user@example.com\\"
"
`;

exports[`Code Export JavaScript Cypress should export a test with a reused test method 1`] = `
"Feature: valid credentials
    
        
        
        
        
        
    
        
    Scenario: valid credentials
        Given I reset the \\"backup\\" database
        And I log in as \\"test.user@example.com\\"
"
`;

exports[`Code Export JavaScript Cypress should export a test with commands that open a new window 1`] = `
"Feature: select window
    
        
    
        
    Scenario: select window
        Given I reset the \\"backup\\" database
        And I log in as \\"test.user@example.com\\"
"
`;
